[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mlenergy-data"
dynamic = ["version"]
description = "ML.ENERGY Benchmark data toolkit"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "numpy",
    "pandas",
    "PyYAML",
    "huggingface_hub",
    "pyarrow",
]

[dependency-groups]
test = ["pytest"]
lint = ["ruff", "ty"]
docs = ["mkdocs-material", "mkdocstrings[python]"]
dev = [{include-group = "test"}, {include-group = "lint"}, {include-group = "docs"}]

[tool.setuptools.dynamic]
version = {attr = "mlenergy_data.__version__"}

[tool.setuptools.packages.find]
include = ["mlenergy_data*"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = [
    "SIM108",
    "RUF046",
]

[tool.ruff.lint.isort]
known-first-party = ["mlenergy_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
