[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mlenergy-data"
dynamic = ["version"]
description = "ML.ENERGY Benchmark data toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Jae-Won Chung", email = "jwnchung@umich.edu"},
]
keywords = ["machine-learning", "energy", "benchmark", "gpu"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "pandas",
    "PyYAML",
    "huggingface_hub",
    "pyarrow",
]

[project.urls]
Homepage = "https://ml.energy/data"
Documentation = "https://ml.energy/data"
Repository = "https://github.com/ml-energy/data"
Issues = "https://github.com/ml-energy/data/issues"

[dependency-groups]
test = ["pytest", "pytest-examples", "matplotlib"]
lint = ["ruff", "ty"]
docs = ["mkdocs-material[imaging]", "mkdocstrings[python]", "mkdocs-htmlproofer-plugin"]
dev = [{include-group = "test"}, {include-group = "lint"}, {include-group = "docs"}]

[tool.setuptools.dynamic]
version = {attr = "mlenergy_data.__version__"}

[tool.setuptools.packages.find]
include = ["mlenergy_data*"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = [
    "SIM108",
    "RUF046",
]

[tool.ruff.lint.isort]
known-first-party = ["mlenergy_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
